// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TypeaheadInputMulti> Default story renders snapshot 1`] = `
<div
  class="rbt-input-multi form-control rbt-input"
  tabindex="-1"
>
  <div
    class="rbt-input-wrapper"
  >
    <div
      class="rbt-token rbt-token-removeable"
      tabindex="0"
    >
      <div
        class="rbt-token-label"
      >
        Alaska
      </div>
      <button
        aria-label="Remove"
        class="close btn-close rbt-close rbt-token-remove-button"
        tabindex="-1"
        type="button"
      >
        <span
          aria-hidden="true"
          class="rbt-close-content"
        >
          ×
        </span>
        <span
          class="sr-only visually-hidden"
        >
          Remove
        </span>
      </button>
    </div>
    <div
      class="rbt-token rbt-token-removeable"
      tabindex="0"
    >
      <div
        class="rbt-token-label"
      >
        Arizona
      </div>
      <button
        aria-label="Remove"
        class="close btn-close rbt-close rbt-token-remove-button"
        tabindex="-1"
        type="button"
      >
        <span
          aria-hidden="true"
          class="rbt-close-content"
        >
          ×
        </span>
        <span
          class="sr-only visually-hidden"
        >
          Remove
        </span>
      </button>
    </div>
    <div
      class="rbt-token rbt-token-removeable"
      tabindex="0"
    >
      <div
        class="rbt-token-label"
      >
        Arkansas
      </div>
      <button
        aria-label="Remove"
        class="close btn-close rbt-close rbt-token-remove-button"
        tabindex="-1"
        type="button"
      >
        <span
          aria-hidden="true"
          class="rbt-close-content"
        >
          ×
        </span>
        <span
          class="sr-only visually-hidden"
        >
          Remove
        </span>
      </button>
    </div>
    <div
      style="display: flex; flex: 1; height: 100%; position: relative;"
    >
      <input
        class="rbt-input-main"
        style="background-color: transparent; border: 0px; box-shadow: none; cursor: inherit; outline: none; padding: 0px; width: 100%; z-index: 1;"
        value=""
      />
      <input
        aria-hidden="true"
        class="rbt-input-hint"
        readonly=""
        style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%; border-style: inset inset inset inset; border-width: 0px 0px 0px 0px; line-height: normal; padding: 0px 0px 0px 0px;"
        tabindex="-1"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`<TypeaheadInputMulti> Disabled story renders snapshot 1`] = `
<div
  class="rbt-input-multi disabled form-control rbt-input"
  tabindex="-1"
>
  <div
    class="rbt-input-wrapper"
  >
    <div
      class="rbt-token rbt-token-disabled"
    >
      <div
        class="rbt-token-label"
      >
        Alaska
      </div>
    </div>
    <div
      class="rbt-token rbt-token-disabled"
    >
      <div
        class="rbt-token-label"
      >
        Arizona
      </div>
    </div>
    <div
      class="rbt-token rbt-token-disabled"
    >
      <div
        class="rbt-token-label"
      >
        Arkansas
      </div>
    </div>
    <div
      style="display: flex; flex: 1; height: 100%; position: relative;"
    >
      <input
        class="rbt-input-main"
        disabled=""
        style="background-color: transparent; border: 0px; box-shadow: none; cursor: inherit; outline: none; padding: 0px; width: 100%; z-index: 1;"
        value=""
      />
      <input
        aria-hidden="true"
        class="rbt-input-hint"
        readonly=""
        style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%; border-style: inset inset inset inset; border-width: 0px 0px 0px 0px; line-height: normal; padding: 0px 0px 0px 0px;"
        tabindex="-1"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`<TypeaheadInputMulti> FocusState story renders snapshot 1`] = `
<div
  class="rbt-input-multi form-control rbt-input focus"
  tabindex="-1"
>
  <div
    class="rbt-input-wrapper"
  >
    <div
      class="rbt-token rbt-token-removeable"
      tabindex="0"
    >
      <div
        class="rbt-token-label"
      >
        Alaska
      </div>
      <button
        aria-label="Remove"
        class="close btn-close rbt-close rbt-token-remove-button"
        tabindex="-1"
        type="button"
      >
        <span
          aria-hidden="true"
          class="rbt-close-content"
        >
          ×
        </span>
        <span
          class="sr-only visually-hidden"
        >
          Remove
        </span>
      </button>
    </div>
    <div
      class="rbt-token rbt-token-removeable"
      tabindex="0"
    >
      <div
        class="rbt-token-label"
      >
        Arizona
      </div>
      <button
        aria-label="Remove"
        class="close btn-close rbt-close rbt-token-remove-button"
        tabindex="-1"
        type="button"
      >
        <span
          aria-hidden="true"
          class="rbt-close-content"
        >
          ×
        </span>
        <span
          class="sr-only visually-hidden"
        >
          Remove
        </span>
      </button>
    </div>
    <div
      class="rbt-token rbt-token-removeable"
      tabindex="0"
    >
      <div
        class="rbt-token-label"
      >
        Arkansas
      </div>
      <button
        aria-label="Remove"
        class="close btn-close rbt-close rbt-token-remove-button"
        tabindex="-1"
        type="button"
      >
        <span
          aria-hidden="true"
          class="rbt-close-content"
        >
          ×
        </span>
        <span
          class="sr-only visually-hidden"
        >
          Remove
        </span>
      </button>
    </div>
    <div
      style="display: flex; flex: 1; height: 100%; position: relative;"
    >
      <input
        class="rbt-input-main"
        style="background-color: transparent; border: 0px; box-shadow: none; cursor: inherit; outline: none; padding: 0px; width: 100%; z-index: 1;"
        value=""
      />
      <input
        aria-hidden="true"
        class="rbt-input-hint"
        readonly=""
        style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%; border-style: inset inset inset inset; border-width: 0px 0px 0px 0px; line-height: normal; padding: 0px 0px 0px 0px;"
        tabindex="-1"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`<TypeaheadInputMulti> Invalid story renders snapshot 1`] = `
<div
  class="rbt-input-multi form-control rbt-input is-invalid focus"
  tabindex="-1"
>
  <div
    class="rbt-input-wrapper"
  >
    <div
      class="rbt-token rbt-token-removeable"
      tabindex="0"
    >
      <div
        class="rbt-token-label"
      >
        Alaska
      </div>
      <button
        aria-label="Remove"
        class="close btn-close rbt-close rbt-token-remove-button"
        tabindex="-1"
        type="button"
      >
        <span
          aria-hidden="true"
          class="rbt-close-content"
        >
          ×
        </span>
        <span
          class="sr-only visually-hidden"
        >
          Remove
        </span>
      </button>
    </div>
    <div
      class="rbt-token rbt-token-removeable"
      tabindex="0"
    >
      <div
        class="rbt-token-label"
      >
        Arizona
      </div>
      <button
        aria-label="Remove"
        class="close btn-close rbt-close rbt-token-remove-button"
        tabindex="-1"
        type="button"
      >
        <span
          aria-hidden="true"
          class="rbt-close-content"
        >
          ×
        </span>
        <span
          class="sr-only visually-hidden"
        >
          Remove
        </span>
      </button>
    </div>
    <div
      class="rbt-token rbt-token-removeable"
      tabindex="0"
    >
      <div
        class="rbt-token-label"
      >
        Arkansas
      </div>
      <button
        aria-label="Remove"
        class="close btn-close rbt-close rbt-token-remove-button"
        tabindex="-1"
        type="button"
      >
        <span
          aria-hidden="true"
          class="rbt-close-content"
        >
          ×
        </span>
        <span
          class="sr-only visually-hidden"
        >
          Remove
        </span>
      </button>
    </div>
    <div
      style="display: flex; flex: 1; height: 100%; position: relative;"
    >
      <input
        class="rbt-input-main"
        style="background-color: transparent; border: 0px; box-shadow: none; cursor: inherit; outline: none; padding: 0px; width: 100%; z-index: 1;"
        value=""
      />
      <input
        aria-hidden="true"
        class="rbt-input-hint"
        readonly=""
        style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%; border-style: inset inset inset inset; border-width: 0px 0px 0px 0px; line-height: normal; padding: 0px 0px 0px 0px;"
        tabindex="-1"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`<TypeaheadInputMulti> Large story renders snapshot 1`] = `
<div
  class="rbt-input-multi form-control rbt-input form-control-lg"
  tabindex="-1"
>
  <div
    class="rbt-input-wrapper"
  >
    <div
      class="rbt-token rbt-token-removeable"
      tabindex="0"
    >
      <div
        class="rbt-token-label"
      >
        Alaska
      </div>
      <button
        aria-label="Remove"
        class="close btn-close rbt-close rbt-token-remove-button"
        tabindex="-1"
        type="button"
      >
        <span
          aria-hidden="true"
          class="rbt-close-content"
        >
          ×
        </span>
        <span
          class="sr-only visually-hidden"
        >
          Remove
        </span>
      </button>
    </div>
    <div
      class="rbt-token rbt-token-removeable"
      tabindex="0"
    >
      <div
        class="rbt-token-label"
      >
        Arizona
      </div>
      <button
        aria-label="Remove"
        class="close btn-close rbt-close rbt-token-remove-button"
        tabindex="-1"
        type="button"
      >
        <span
          aria-hidden="true"
          class="rbt-close-content"
        >
          ×
        </span>
        <span
          class="sr-only visually-hidden"
        >
          Remove
        </span>
      </button>
    </div>
    <div
      class="rbt-token rbt-token-removeable"
      tabindex="0"
    >
      <div
        class="rbt-token-label"
      >
        Arkansas
      </div>
      <button
        aria-label="Remove"
        class="close btn-close rbt-close rbt-token-remove-button"
        tabindex="-1"
        type="button"
      >
        <span
          aria-hidden="true"
          class="rbt-close-content"
        >
          ×
        </span>
        <span
          class="sr-only visually-hidden"
        >
          Remove
        </span>
      </button>
    </div>
    <div
      style="display: flex; flex: 1; height: 100%; position: relative;"
    >
      <input
        class="rbt-input-main"
        style="background-color: transparent; border: 0px; box-shadow: none; cursor: inherit; outline: none; padding: 0px; width: 100%; z-index: 1;"
        value=""
      />
      <input
        aria-hidden="true"
        class="rbt-input-hint"
        readonly=""
        style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%; border-style: inset inset inset inset; border-width: 0px 0px 0px 0px; line-height: normal; padding: 0px 0px 0px 0px;"
        tabindex="-1"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`<TypeaheadInputMulti> Small story renders snapshot 1`] = `
<div
  class="rbt-input-multi form-control rbt-input form-control-sm"
  tabindex="-1"
>
  <div
    class="rbt-input-wrapper"
  >
    <div
      class="rbt-token rbt-token-removeable"
      tabindex="0"
    >
      <div
        class="rbt-token-label"
      >
        Alaska
      </div>
      <button
        aria-label="Remove"
        class="close btn-close rbt-close rbt-token-remove-button"
        tabindex="-1"
        type="button"
      >
        <span
          aria-hidden="true"
          class="rbt-close-content"
        >
          ×
        </span>
        <span
          class="sr-only visually-hidden"
        >
          Remove
        </span>
      </button>
    </div>
    <div
      class="rbt-token rbt-token-removeable"
      tabindex="0"
    >
      <div
        class="rbt-token-label"
      >
        Arizona
      </div>
      <button
        aria-label="Remove"
        class="close btn-close rbt-close rbt-token-remove-button"
        tabindex="-1"
        type="button"
      >
        <span
          aria-hidden="true"
          class="rbt-close-content"
        >
          ×
        </span>
        <span
          class="sr-only visually-hidden"
        >
          Remove
        </span>
      </button>
    </div>
    <div
      class="rbt-token rbt-token-removeable"
      tabindex="0"
    >
      <div
        class="rbt-token-label"
      >
        Arkansas
      </div>
      <button
        aria-label="Remove"
        class="close btn-close rbt-close rbt-token-remove-button"
        tabindex="-1"
        type="button"
      >
        <span
          aria-hidden="true"
          class="rbt-close-content"
        >
          ×
        </span>
        <span
          class="sr-only visually-hidden"
        >
          Remove
        </span>
      </button>
    </div>
    <div
      style="display: flex; flex: 1; height: 100%; position: relative;"
    >
      <input
        class="rbt-input-main"
        style="background-color: transparent; border: 0px; box-shadow: none; cursor: inherit; outline: none; padding: 0px; width: 100%; z-index: 1;"
        value=""
      />
      <input
        aria-hidden="true"
        class="rbt-input-hint"
        readonly=""
        style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%; border-style: inset inset inset inset; border-width: 0px 0px 0px 0px; line-height: normal; padding: 0px 0px 0px 0px;"
        tabindex="-1"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`<TypeaheadInputMulti> Valid story renders snapshot 1`] = `
<div
  class="rbt-input-multi form-control rbt-input is-valid focus"
  tabindex="-1"
>
  <div
    class="rbt-input-wrapper"
  >
    <div
      class="rbt-token rbt-token-removeable"
      tabindex="0"
    >
      <div
        class="rbt-token-label"
      >
        Alaska
      </div>
      <button
        aria-label="Remove"
        class="close btn-close rbt-close rbt-token-remove-button"
        tabindex="-1"
        type="button"
      >
        <span
          aria-hidden="true"
          class="rbt-close-content"
        >
          ×
        </span>
        <span
          class="sr-only visually-hidden"
        >
          Remove
        </span>
      </button>
    </div>
    <div
      class="rbt-token rbt-token-removeable"
      tabindex="0"
    >
      <div
        class="rbt-token-label"
      >
        Arizona
      </div>
      <button
        aria-label="Remove"
        class="close btn-close rbt-close rbt-token-remove-button"
        tabindex="-1"
        type="button"
      >
        <span
          aria-hidden="true"
          class="rbt-close-content"
        >
          ×
        </span>
        <span
          class="sr-only visually-hidden"
        >
          Remove
        </span>
      </button>
    </div>
    <div
      class="rbt-token rbt-token-removeable"
      tabindex="0"
    >
      <div
        class="rbt-token-label"
      >
        Arkansas
      </div>
      <button
        aria-label="Remove"
        class="close btn-close rbt-close rbt-token-remove-button"
        tabindex="-1"
        type="button"
      >
        <span
          aria-hidden="true"
          class="rbt-close-content"
        >
          ×
        </span>
        <span
          class="sr-only visually-hidden"
        >
          Remove
        </span>
      </button>
    </div>
    <div
      style="display: flex; flex: 1; height: 100%; position: relative;"
    >
      <input
        class="rbt-input-main"
        style="background-color: transparent; border: 0px; box-shadow: none; cursor: inherit; outline: none; padding: 0px; width: 100%; z-index: 1;"
        value=""
      />
      <input
        aria-hidden="true"
        class="rbt-input-hint"
        readonly=""
        style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%; border-style: inset inset inset inset; border-width: 0px 0px 0px 0px; line-height: normal; padding: 0px 0px 0px 0px;"
        tabindex="-1"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`<TypeaheadInputMulti> WithHint story renders snapshot 1`] = `
<div
  class="rbt-input-multi form-control rbt-input"
  tabindex="-1"
>
  <div
    class="rbt-input-wrapper"
  >
    <div
      class="rbt-token rbt-token-removeable"
      tabindex="0"
    >
      <div
        class="rbt-token-label"
      >
        Alaska
      </div>
      <button
        aria-label="Remove"
        class="close btn-close rbt-close rbt-token-remove-button"
        tabindex="-1"
        type="button"
      >
        <span
          aria-hidden="true"
          class="rbt-close-content"
        >
          ×
        </span>
        <span
          class="sr-only visually-hidden"
        >
          Remove
        </span>
      </button>
    </div>
    <div
      class="rbt-token rbt-token-removeable"
      tabindex="0"
    >
      <div
        class="rbt-token-label"
      >
        Arizona
      </div>
      <button
        aria-label="Remove"
        class="close btn-close rbt-close rbt-token-remove-button"
        tabindex="-1"
        type="button"
      >
        <span
          aria-hidden="true"
          class="rbt-close-content"
        >
          ×
        </span>
        <span
          class="sr-only visually-hidden"
        >
          Remove
        </span>
      </button>
    </div>
    <div
      class="rbt-token rbt-token-removeable"
      tabindex="0"
    >
      <div
        class="rbt-token-label"
      >
        Arkansas
      </div>
      <button
        aria-label="Remove"
        class="close btn-close rbt-close rbt-token-remove-button"
        tabindex="-1"
        type="button"
      >
        <span
          aria-hidden="true"
          class="rbt-close-content"
        >
          ×
        </span>
        <span
          class="sr-only visually-hidden"
        >
          Remove
        </span>
      </button>
    </div>
    <div
      style="display: flex; flex: 1; height: 100%; position: relative;"
    >
      <input
        class="rbt-input-main"
        style="background-color: transparent; border: 0px; box-shadow: none; cursor: inherit; outline: none; padding: 0px; width: 100%; z-index: 1;"
        value="cali"
      />
      <input
        aria-hidden="true"
        class="rbt-input-hint"
        readonly=""
        style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%; border-style: inset inset inset inset; border-width: 0px 0px 0px 0px; line-height: normal; padding: 0px 0px 0px 0px;"
        tabindex="-1"
        value="california"
      />
    </div>
  </div>
</div>
`;
